fix align value

--- a/food-in-eye_react/src/css/Account.module.css
+++ b/food-in-eye_react/src/css/Account.module.css
@@ -1,13 +1,14 @@
 * {
-  margin: 0px;
+  margin: 0 auto;
   padding: 0px;
   box-sizing: border-box;
 }
 
 .container {
   display: flex;
-  flex-direction: column;
+  flex-direction: column wrap;
   justify-content: center;
+  align-content: center;
   align-items: center;
   min-height: 100vh;
 }
